--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -2,8 +2,8 @@ spring.application.name = hms
 
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/hospital?autoreconnect=true
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.username = rahul
+spring.datasource.password = Rahul@16roman
 
 mybatis.configuration.map-underscore-to-camel-case=true
 
