--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,11 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-log4j2'
     // compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
     // compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.2.5.RELEASE'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 }
 
 test {
