--- a/build.gradle
+++ b/build.gradle
@@ -77,16 +77,18 @@ dependencies {
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
 	
-	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.2.3.RELEASE'
+
 	// Logger
 	compile 'org.springframework.boot:spring-boot-starter-log4j2'
     // compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
     // compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
 
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
-	compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.2.5.RELEASE'
+	// compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.2.5.RELEASE'
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
-	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+	// compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
 }
 
 test {
