Test cases for patients flow completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driverClassName = com.mysql.jdbc.Driver
 #spring.datasource.url = jdbc:mysql://hospital-management-database.ckxcw4hb8j0d.us-east-1.rds.amazonaws.com:3306/hospital?autoreconnect=true
 spring.datasource.url = jdbc:mysql://localhost:3306/hospital?autoreconnect=true
 spring.datasource.username = root
-spring.datasource.password = rahulroman
+spring.datasource.password = root
 server.port = 8080
 spring.flyway.baseline-on-migrate=true
 
