--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       java: corretto8
   build:
     commands:
+      - chmod +x gradlew
       - echo Build started on `date`
       - ./gradlew bootWar
 artifacts:
