--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,5 +12,5 @@ phases:
 artifacts:
   files:
     - build/libs/hms-v3-0.0.1-SNAPSHOT.war
-    # - appspec.yml
+    - appspec.yml
   discard-paths: yes
