Edited the conf files

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,5 +12,6 @@ phases:
 artifacts:
   files:
     - build/libs/hms-v3-0.0.1-SNAPSHOT.war
-    - appspec.yml
+    - .ebextensions/**/*
+  base-directory: 'build/libs'
   discard-paths: yes
