Migrated to Cloud

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,5 @@ phases:
 artifacts:
   files:
     - build/libs/hms-v3-0.0.1-SNAPSHOT.war
-    - .ebextensions/fix-path.config
-  base-directory: 'build/libs'
+    - .ebextensions\fix-path.config
   discard-paths: yes
